p2/configs/services.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: app1-service
spec:
  selector:
    app: app1
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: app2-service
spec:
  selector:
    app: app2
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: app3-service
spec:
  selector:
    app: app3
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
