p2/configs/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: app1-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: app1.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-service
            port:
              number: 80
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: app2-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: app2.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-service
            port:
              number: 80
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: app3-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: app3.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app3-service
            port:
              number: 80
---
